# stryke-redis

./: Cargo.toml  Makefile  README.md  stryke.toml
.github/workflows/: ci.yml  release.yml
docs/: index.html  report.html
examples/: discover.stk  kv.stk  pipeline.stk  publish.stk  structures.stk
lib/: Redis.stk
src/: lib.rs  main.rs
t/: test_redis.stk  test_stryke_redis_surface.stk
tests/: contract_cli_round4.rs
