[package]
name = "stryke-redis"
version = "0.5.0"
edition = "2021"
description = "Redis / Valkey cdylib for the stryke `redis` package — dlopened in-process via stryke's FFI bridge"
authors = ["MenkeTechnologies"]
license = "MIT"
repository = "https://github.com/MenkeTechnologies/stryke-redis"
homepage = "https://menketechnologies.github.io/stryke-redis/"
publish = false

[lib]
name = "stryke_redis"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
redis = { version = "1", default-features = false, features = [
    "acl", "streams", "geospatial", "script", "num-bigint", "tls-rustls",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
anyhow = "1"
once_cell = "1"
parking_lot = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
